--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -116,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model Definition\n",
+    "### Model definition\n",
     "The following function initializes a Vision Transformer (ViT) model configured for the FashionMNIST dataset:"
    ]
   },
