--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Package and Model Setup\n",
+    "## 1. Package and model setup\n",
     "\n",
     "Install the required dependencies for this tutorial:"
    ]
