--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -351,7 +351,7 @@
     "    <img src=\"https://raw.githubusercontent.com/ray-project/ray/master/doc/source/train/examples/pytorch/pytorch-fsdp/images/cpu_offload_profile.png\" width=\"600\"/>\n",
     "  </div>\n",
     "</div>\n",
-    "Note: The above images are generated using PyTorch's Memory Profiler, which is covered later in this tutorial.\n",
+    "Note: The above images are generated using PyTorch's Memory Profiler, which this tutorial covers later.\n",
     "\n",
     "It can be seen that CPU Offloading significantly reduces the amount of GPU memory occupied by model parameters. \n",
     "\n",
