--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -353,7 +353,7 @@
     "</div>\n",
     "Note: The above images are generated using PyTorch's Memory Profiler, which this tutorial covers later.\n",
     "\n",
-    "It can be seen that CPU Offloading significantly reduces the amount of GPU memory occupied by model parameters. \n",
+    "It can be seen that CPU offloading significantly reduces the amount of GPU memory occupied by model parameters. \n",
     "\n",
     "Learn more about CPU offloading on the [PyTorch documentation](https://docs.pytorch.org/docs/stable/distributed.fsdp.fully_shard.html#torch.distributed.fsdp.CPUOffloadPolicy).\n",
     "\n",
