--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -355,7 +355,7 @@
     "\n",
     "It can be seen that CPU offloading significantly reduces the amount of GPU memory occupied by model parameters. \n",
     "\n",
-    "Learn more about CPU offloading on the [PyTorch documentation](https://docs.pytorch.org/docs/stable/distributed.fsdp.fully_shard.html#torch.distributed.fsdp.CPUOffloadPolicy).\n",
+    "Learn more about CPU offloading in the [PyTorch documentation](https://docs.pytorch.org/docs/stable/distributed.fsdp.fully_shard.html#torch.distributed.fsdp.CPUOffloadPolicy).\n",
     "\n",
     "\n",
     "### 3c. `reshard_after_forward`  \n",
