--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -359,7 +359,7 @@
     "\n",
     "\n",
     "### `reshard_after_forward` flag \n",
-    "`fully_shard` has a `reshard_after_forward` flag that enables all-gathered model weights to be freed immediately after the forward pass. This reduces peak GPU memory usage but increases the communication overhead between workers during the backward pass as parameters need to be all-gathered again. If unsharded model parameters are able to completely fit on each worker and do not pose a memory bottleneck, there is no need to enable `reshard_after_forward`.\n",
+    "`fully_shard` has a `reshard_after_forward` flag that enables all-gathered model weights to be freed immediately after the forward pass. This reduces peak GPU memory usage but increases the communication overhead between workers during the backward pass as parameters need to be all-gathered again. If unsharded model parameters are able to completely fit on each worker and don't pose a memory bottleneck, there's no need to enable `reshard_after_forward`.\n",
     "\n",
     "<div style=\"display: flex; gap: 40px; align-items: flex-start;\">\n",
     "  <div style=\"text-align: center;\"> \n",
