--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -374,7 +374,7 @@
     "\n",
     "With `reshard_after_forward=True`, the memory allocated to model parameters drops after the forward step whereas it peaks when `reshard_after_forward=False`.\n",
     "\n",
-    "### 3d. Mixed Precision\n",
+    "### Mixed precision\n",
     "\n",
     "Enabling mixed precision accelerates training and reduces GPU memory usage with minimal accuracy impact.\n",
     "\n",
