--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -378,7 +378,7 @@
     "\n",
     "Enabling mixed precision accelerates training and reduces GPU memory usage with minimal accuracy impact.\n",
     "\n",
-    "**Benefits of mixed precision with FSDP2:**\n",
+    "**Benefits of mixed precision with FSDP2**\n",
     "- Reduced memory usage for activations and intermediate computations\n",
     "- Faster computation on modern GPUs\n",
     "- Maintained numerical stability through selective precision\n",
