--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -389,7 +389,7 @@
     "    <img src=\"https://raw.githubusercontent.com/ray-project/ray/master/doc/source/train/examples/pytorch/pytorch-fsdp/images/gpu_memory_profile.png\" width=\"600\"/>\n",
     "  </div>\n",
     "  <div style=\"text-align: center;\">\n",
-    "    <h3>With Mixed Precision</h3>\n",
+    "    <h3>With mixed precision</h3>\n",
     "    <img src=\"https://raw.githubusercontent.com/ray-project/ray/master/doc/source/train/examples/pytorch/pytorch-fsdp/images/mixed_precision_profile.png\" width=\"600\"/>\n",
     "  </div>\n",
     "</div>\n",
