--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -488,7 +488,7 @@
    "metadata": {},
    "source": [
     "## 4. Distributed Checkpointing\n",
-    "This section walks through how to setup distributed checkpointing, load a distributed model from a checkpoint, save distributed model checkpoints, and save a model for inference. "
+    "This section sets up distributed checkpointing, loads a distributed model from a checkpoint, saves distributed model checkpoints, and saves a model for inference. "
    ]
   },
   {
