--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -523,7 +523,7 @@
    "outputs": [],
    "source": [
     "class AppState(Stateful):\n",
-    "    \"\"\"This is a useful wrapper for checkpointing the Application State. Since this object is compliant\n",
+    "    \"\"\"This is a useful wrapper for checkpointing the Application State. Because this object is compliant\n",
     "    with the Stateful protocol, PyTorch DCP automatically calls state_dict/load_state_dict as needed in the\n",
     "    dcp.save/load APIs.\n",
     "\n",
