--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -613,7 +613,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4c. Saving Model Checkpoints\n",
+    "### Save model checkpoints\n",
     "\n",
     "The following function handles periodic checkpoint saving during training, combining metrics reporting with distributed checkpoint storage:"
    ]
