--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -657,7 +657,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4d. Saving Model for Inference\n",
+    "### Save the model for inference\n",
     "\n",
     "After training, it is often useful to consolidate sharded checkpoints into a single file for convenient sharing or inference. Unlike regular distributed checkpointing, this process produces a large artifact compatible with torch.load. To do so, the `get_model_state_dict` function all-gathers parameter shards to rank 0, reconstructs the full state dict, and then saves the consolidated checkpoint to cluster storage.\n",
     "\n",
