--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -718,7 +718,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Launching the Distributed Training Job\n",
+    "## Launching the distributed training job\n",
     "\n",
     "This section configures and launches the distributed training job using Ray Train's TorchTrainer:"
    ]
