--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -772,7 +772,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. GPU Memory Profiling\n",
+    "## GPU memory profiling\n",
     "\n",
     "GPU memory profiling is an useful tool for monitoring and analyzing memory usage during model training. It helps identify bottlenecks, optimize resource allocation, and prevent out-of-memory errors. PyTorch's GPU memory profiler is configured within the training function.\n",
     "\n",
