--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -790,7 +790,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Post Training Directory View\n",
+    "### Post training directory view\n",
     "The Anyscale platform saves the checkpoint shards, full model, and memory profiling reports in cluster storage with the following layout:"
    ]
   },
