--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -780,7 +780,7 @@
     "\n",
     "<div style=\"display: flex; gap: 40px; align-items: flex-start;\">\n",
     "  <div style=\"text-align: center;\">\n",
-    "    <h3>Example Memory Profile</h3>\n",
+    "    <h3>Example memory profile</h3>\n",
     "    <img src=\"https://raw.githubusercontent.com/ray-project/ray/master/doc/source/train/examples/pytorch/pytorch-fsdp/images/gpu_memory_profile.png\" width=\"600\"/>\n",
     "  </div>\n",
     "</div>\n"
