fix base_url and api_key parameters
Signed-off-by: Aydin Abiar <aydin@anyscale.com>

--- a/doc/source/serve/tutorials/deployment-serve-llm/medium-size-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/medium-size-llm/notebook.ipynb
@@ -39,7 +39,7 @@
     "        # Or unsloth/Meta-Llama-3.1-70B-Instruct for an ungated model\n",
     "        model_source=\"meta-llama/Llama-3.1-70B-Instruct\",\n",
     "    ),\n",
-    "    accelerator_type=\"A100-40G\",\n",
+    "    accelerator_type=\"A100-40G\", # or L40S\n",
     "    deployment_config=dict(\n",
     "        autoscaling_config=dict(\n",
     "            min_replicas=1,\n",
@@ -156,7 +156,7 @@
     "API_KEY = \"FAKE_KEY\"\n",
     "BASE_URL = \"http://localhost:8000\"\n",
     "\n",
-    "client = OpenAI(BASE_URL=urljoin(BASE_URL, \"v1\"), API_KEY=API_KEY)\n",
+    "client = OpenAI(base_url=urljoin(BASE_URL, \"v1\"), api_key=API_KEY)\n",
     "\n",
     "response = client.chat.completions.create(\n",
     "    model=\"my-llama-3.1-70b\",\n",
