--- a/doc/source/serve/tutorials/deployment-serve-llm/reasoning-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/reasoning-llm/notebook.ipynb
@@ -219,7 +219,7 @@
     "API_KEY = \"FAKE_KEY\"\n",
     "BASE_URL = \"http://localhost:8000\"\n",
     "\n",
-    "client = OpenAI(BASE_URL=urljoin(BASE_URL, \"v1\"), API_KEY=API_KEY)\n",
+    "client = OpenAI(base_url=urljoin(BASE_URL, \"v1\"), api_key=API_KEY)\n",
     "\n",
     "response = client.chat.completions.create(\n",
     "    model=\"my-qwq-32B\",\n",
@@ -290,7 +290,7 @@
     "API_KEY = \"FAKE_KEY\"\n",
     "BASE_URL = \"http://localhost:8000\"\n",
     "\n",
-    "client = OpenAI(BASE_URL=urljoin(BASE_URL, \"v1\"), API_KEY=API_KEY)\n",
+    "client = OpenAI(base_url=urljoin(BASE_URL, \"v1\"), api_key=API_KEY)\n",
     "\n",
     "# Example: Complex query with thinking process\n",
     "response = client.chat.completions.create(\n",
