--- a/doc/source/serve/tutorials/deployment-serve-llm/vision-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/vision-llm/notebook.ipynb
@@ -146,7 +146,7 @@
                 "API_KEY = \"FAKE_KEY\"\n",
                 "BASE_URL = \"http://localhost:8000\"\n",
                 "\n",
-                "client = OpenAI(BASE_URL=urljoin(BASE_URL, \"v1\"), API_KEY=API_KEY)\n",
+                "client = OpenAI(base_url=urljoin(BASE_URL, \"v1\"), api_key=API_KEY)\n",
                 "\n",
                 "response = client.chat.completions.create(\n",
                 "    model=\"my-qwen-VL\",\n",
@@ -192,7 +192,7 @@
                 "API_KEY = \"FAKE_KEY\"\n",
                 "BASE_URL = \"http://localhost:8000\"\n",
                 "\n",
-                "client = OpenAI(BASE_URL=urljoin(BASE_URL, \"v1\"), API_KEY=API_KEY)\n",
+                "client = OpenAI(base_url=urljoin(BASE_URL, \"v1\"), api_key=API_KEY)\n",
                 "\n",
                 "### From an image locally saved as `example.jpg`\n",
                 "# Load and encode image as base64\n",
