switch to L40S gpu instead of A100
Signed-off-by: Aydin Abiar <aydin@anyscale.com>

--- a/doc/source/serve/tutorials/deployment-serve-llm/medium-size-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/medium-size-llm/notebook.ipynb
@@ -39,7 +39,7 @@
     "        # Or unsloth/Meta-Llama-3.1-70B-Instruct for an ungated model\n",
     "        model_source=\"meta-llama/Llama-3.1-70B-Instruct\",\n",
     "    ),\n",
-    "    accelerator_type=\"A100-40G\", # or L40S\n",
+    "    accelerator_type=\"L40S\", \n",
     "    deployment_config=dict(\n",
     "        autoscaling_config=dict(\n",
     "            min_replicas=1,\n",
@@ -335,9 +335,9 @@
     "\n",
     "Ray Serve LLM uses [vLLM](https://docs.vllm.ai/en/latest/) as its backend engine, which logs the *maximum concurrency* it can support based on your configuration.  \n",
     "\n",
-    "Example log:\n",
+    "Example log for 8xL40S:\n",
     "```console\n",
-    "INFO 08-19 20:57:37 [kv_cache_utils.py:837] Maximum concurrency for 32,768 tokens per request: 13.02x\n",
+    "INFO 08-19 20:57:37 [kv_cache_utils.py:837] Maximum concurrency for 32,768 tokens per request: 17.79x\n",
     "```\n",
     "\n",
     "The following are a few ways to improve concurrency depending on your model and hardware:  \n",
