--- a/doc/source/serve/tutorials/deployment-serve-llm/reasoning-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/reasoning-llm/notebook.ipynb
@@ -107,7 +107,7 @@
     "        model_id=\"my-qwq-32B\",\n",
     "        model_source=\"Qwen/QwQ-32B\",\n",
     "    ),\n",
-    "    accelerator_type=\"A100-40G\",\n",
+    "    accelerator_type=\"L40S\",\n",
     "    deployment_config=dict(\n",
     "        autoscaling_config=dict(\n",
     "            min_replicas=1,\n",
@@ -117,7 +117,8 @@
     "    ### Uncomment if your model is gated and needs your Hugging Face token to access it\n",
     "    # runtime_env=dict(env_vars={\"HF_TOKEN\": os.environ.get(\"HF_TOKEN\")}),\n",
     "    engine_kwargs=dict(\n",
-    "        tensor_parallel_size=8, max_model_len=32768, reasoning_parser=\"deepseek_r1\"\n",
+    "        # 4 GPUs is enough but you can increase tensor_parallel_size to more GPUs for better concurrency.\n",
+    "        tensor_parallel_size=4, max_model_len=32768, reasoning_parser=\"deepseek_r1\"\n",
     "    ),\n",
     ")\n",
     "\n",
