--- a/doc/source/serve/tutorials/deployment-serve-llm/hybrid-reasoning-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/hybrid-reasoning-llm/notebook.ipynb
@@ -133,7 +133,7 @@
     "        model_id=\"my-qwen-3-32b\",\n",
     "        model_source=\"Qwen/Qwen3-32B\",\n",
     "    ),\n",
-    "    accelerator_type=\"A100-40G\",\n",
+    "    accelerator_type=\"L40S\",\n",
     "    deployment_config=dict(\n",
     "        autoscaling_config=dict(\n",
     "            min_replicas=1,\n",
@@ -143,7 +143,8 @@
     "    ### Uncomment if your model is gated and needs your Hugging Face token to access it.\n",
     "    # runtime_env=dict(env_vars={\"HF_TOKEN\": os.environ.get(\"HF_TOKEN\")}),\n",
     "    engine_kwargs=dict(\n",
-    "        tensor_parallel_size=8, max_model_len=32768, reasoning_parser=\"qwen3\"\n",
+    "        # 4 GPUs is enough but you can increase tensor_parallel_size to more GPUs for better concurrency.\n",
+    "        tensor_parallel_size=4, max_model_len=32768, reasoning_parser=\"qwen3\"\n",
     "    ),\n",
     ")\n",
     "app = build_openai_app({\"llm_configs\": [llm_config]})\n"
