--- a/doc/source/serve/tutorials/deployment-serve-llm/medium-size-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/medium-size-llm/notebook.ipynb
@@ -345,9 +345,9 @@
     "**Reduce `max_model_len`**  \n",
     "Lowering `max_model_len` reduces the memory needed for KV cache.\n",
     "\n",
-    "**Example:** Running Llama-3.1-70&nbsp;B on an A100-40G:\n",
-    "* `max_model_len = 32,768` → concurrency ≈ 13\n",
-    "* `max_model_len = 16,384` → concurrency ≈ 26\n",
+    "**Example:** Running Llama-3.1-70&nbsp;B on 8xL40S:\n",
+    "* `max_model_len = 32,768` → concurrency ≈ 18\n",
+    "* `max_model_len = 16,384` → concurrency ≈ 36\n",
     "\n",
     "**Use Quantized models**  \n",
     "Quantizing your model (for example, to FP8) reduces the model's memory footprint, freeing up memory for more KV cache and enabling more concurrent requests.\n",
