--- a/doc/source/ray-overview/examples/entity-recognition-with-llms/README.ipynb
+++ b/doc/source/ray-overview/examples/entity-recognition-with-llms/README.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "%%bash\n",
     "# Install dependencies\n",
-    "uv pip install -r /home/ray/lock_file.lock --index-strategy unsafe-best-match --no-deps"
+    "uv pip install -r /home/ray/lock_file.lock --index-strategy unsafe-best-match --no-deps --system"
    ]
   },
   {
