--- a/doc/source/ray-overview/examples/e2e-audio/README.ipynb
+++ b/doc/source/ray-overview/examples/e2e-audio/README.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "uv pip install -r llm_example_py311_cu128.lock --no-deps --index-strategy unsafe-best-match"
+    "uv pip install -r llm_example_py311_cu128.lock --no-deps --index-strategy unsafe-best-match --system"
    ]
   },
   {
