update some doc examples
Signed-off-by: Justin Yu <justinvyu@anyscale.com>

--- a/doc/source/tune/examples/tune-pytorch-lightning.ipynb
+++ b/doc/source/tune/examples/tune-pytorch-lightning.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "The main abstraction of PyTorch Lightning is the `LightningModule` class, which should be extended by your application. There is [a great post on how to transfer your models from vanilla PyTorch to Lightning](https://towardsdatascience.com/from-pytorch-to-pytorch-lightning-a-gentle-introduction-b371b7caaf09).\n",
     "\n",
-    "The class structure of PyTorch Lightning makes it very easy to define and tune model parameters. This tutorial will show you how to use Tune with Ray Train's {class}`TorchTrainer <ray.train.torch.TorchTrainer>` to find the best set of parameters for your application on the example of training a MNIST classifier. Notably, the `LightningModule` does not have to be altered at all for this - so you can use it plug and play for your existing models, assuming their parameters are configurable!\n",
+    "The class structure of PyTorch Lightning makes it very easy to define and tune model parameters. This tutorial will show you how to use Tune with PyTorch Lightning. Notably, the `LightningModule` does not have to be altered at all for this - so you can use it plug and play for your existing models, assuming their parameters are configurable!\n",
     "\n",
     ":::{note}\n",
     "To run this example, you will need to install the following:\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "remove-cell"
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define a training function that creates model, datamodule, and lightning trainer with Ray Train utilities."
+    "Define a training function that creates model, `DataModule`, and the PyTorch Lightning `Trainer`."
    ]
   },
   {
@@ -211,13 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ray.train.lightning import (\n",
-    "    RayDDPStrategy,\n",
-    "    RayLightningEnvironment,\n",
-    "    RayTrainReportCallback,\n",
-    "    prepare_trainer,\n",
-    ")\n",
-    "\n",
+    "from ray.tune.integration.pytorch_lightning import TuneReportCheckpointCallback\n",
     "\n",
     "def train_func(config):\n",
     "    dm = MNISTDataModule(batch_size=config[\"batch_size\"])\n",
@@ -226,12 +220,9 @@
     "    trainer = pl.Trainer(\n",
     "        devices=\"auto\",\n",
     "        accelerator=\"auto\",\n",
-    "        strategy=RayDDPStrategy(),\n",
-    "        callbacks=[RayTrainReportCallback()],\n",
-    "        plugins=[RayLightningEnvironment()],\n",
+    "        callbacks=[TuneReportCheckpointCallback()],\n",
     "        enable_progress_bar=False,\n",
     "    )\n",
-    "    trainer = prepare_trainer(trainer)\n",
     "    trainer.fit(model, datamodule=dm)"
    ]
   },
@@ -250,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "remove-cell"
@@ -326,13 +317,13 @@
    "outputs": [],
    "source": [
     "if SMOKE_TEST:\n",
-    "    num_epochs = 3\n",
+    "    num_epochs = 1\n",
     "    num_samples = 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,35 +336,21 @@
    "source": [
     "### Training with GPUs\n",
     "\n",
-    "We can specify the number of resources, including GPUs, that Tune should request for each trial.\n",
-    "\n",
-    "`TorchTrainer` takes care of environment setup for Distributed Data Parallel training, the model and data will automatically get distributed across GPUs. You only need to set the number of GPUs per worker in `ScalingConfig` and also set `accelerator=\"auto\"` in your training function."
+    "We can specify the number of resources, including GPUs, that Tune should request for each trial."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ray.train import RunConfig, ScalingConfig, CheckpointConfig\n",
-    "\n",
-    "scaling_config = ScalingConfig(\n",
-    "    num_workers=3, use_gpu=True, resources_per_worker={\"CPU\": 1, \"GPU\": 1}\n",
-    ")\n",
-    "\n",
-    "run_config = RunConfig(\n",
-    "    checkpoint_config=CheckpointConfig(\n",
-    "        num_to_keep=2,\n",
-    "        checkpoint_score_attribute=\"ptl/val_accuracy\",\n",
-    "        checkpoint_score_order=\"max\",\n",
-    "    ),\n",
-    ")"
+    "train_fn_with_resources = tune.with_resources(train_func, resources={\"CPU\": 1, \"GPU\": 1})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "remove-cell"
@@ -382,25 +359,7 @@
    "outputs": [],
    "source": [
     "if SMOKE_TEST:\n",
-    "    scaling_config = ScalingConfig(\n",
-    "        num_workers=3, use_gpu=False, resources_per_worker={\"CPU\": 1}\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ray.train.torch import TorchTrainer\n",
-    "\n",
-    "# Define a TorchTrainer without hyper-parameters for Tuner\n",
-    "ray_trainer = TorchTrainer(\n",
-    "    train_func,\n",
-    "    scaling_config=scaling_config,\n",
-    "    run_config=run_config,\n",
-    ")"
+    "    train_fn_with_resources = tune.with_resources(train_func, resources={\"CPU\": 1})\n"
    ]
   },
   {
@@ -414,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "hide-output"
@@ -1261,6 +1220,13 @@
     "            num_samples=num_samples,\n",
     "            scheduler=scheduler,\n",
     "        ),\n",
+    "        run_config=tune.RunConfig(\n",
+    "            checkpoint_config=tune.CheckpointConfig(\n",
+    "                num_to_keep=2,\n",
+    "                checkpoint_score_attribute=\"ptl/val_accuracy\",\n",
+    "                checkpoint_score_order=\"max\",\n",
+    "            ),\n",
+    "        ),\n",
     "    )\n",
     "    return tuner.fit()\n",
     "\n",
@@ -1270,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -1311,12 +1277,18 @@
    "source": [
     "## More PyTorch Lightning Examples\n",
     "\n",
+    "- For running distributed PyTorch Lightning training with Ray Train, see the {ref}`quickstart <train-pytorch-lightning>`.\n",
     "- {doc}`[Basic] Train a PyTorch Lightning Image Classifier with Ray Train <../../train/examples/lightning/lightning_mnist_example>`.\n",
     "- {doc}`[Intermediate] Fine-tune a BERT Text Classifier with PyTorch Lightning and Ray Train <../../train/examples/lightning/lightning_cola_advanced>`\n",
     "- {doc}`[Advanced] Fine-tune dolly-v2-7b with PyTorch Lightning and FSDP <../../train/examples/lightning/dolly_lightning_fsdp_finetuning>`\n",
     "- {doc}`/tune/examples/includes/mlflow_ptl_example`: Example for using [MLflow](https://github.com/mlflow/mlflow/)\n",
     "  and [Pytorch Lightning](https://github.com/PyTorchLightning/pytorch-lightning) with Ray Tune.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
