add comment about A100-40G instead of L40S
Signed-off-by: Aydin Abiar <aydin@anyscale.com>

--- a/doc/source/serve/tutorials/deployment-serve-llm/hybrid-reasoning-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/hybrid-reasoning-llm/notebook.ipynb
@@ -133,7 +133,7 @@
     "        model_id=\"my-qwen-3-32b\",\n",
     "        model_source=\"Qwen/Qwen3-32B\",\n",
     "    ),\n",
-    "    accelerator_type=\"L40S\",\n",
+    "    accelerator_type=\"L40S\", # Or \"A100-40G\"\n",
     "    deployment_config=dict(\n",
     "        autoscaling_config=dict(\n",
     "            min_replicas=1,\n",
