--- a/doc/source/serve/tutorials/deployment-serve-llm/reasoning-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/reasoning-llm/notebook.ipynb
@@ -107,7 +107,7 @@
     "        model_id=\"my-qwq-32B\",\n",
     "        model_source=\"Qwen/QwQ-32B\",\n",
     "    ),\n",
-    "    accelerator_type=\"L40S\",\n",
+    "    accelerator_type=\"L40S\", # Or \"A100-40G\"\n",
     "    deployment_config=dict(\n",
     "        autoscaling_config=dict(\n",
     "            min_replicas=1,\n",
