--- a/doc/source/serve/tutorials/deployment-serve-llm/vision-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/vision-llm/notebook.ipynb
@@ -36,7 +36,7 @@
                 "        model_id=\"my-qwen-VL\",\n",
                 "        model_source=\"qwen/Qwen2.5-VL-7B-Instruct\",\n",
                 "    ),\n",
-                "    accelerator_type=\"L40S\",\n",
+                "    accelerator_type=\"L40S\", # Or \"A100-40G\"\n",
                 "    deployment_config=dict(\n",
                 "        autoscaling_config=dict(\n",
                 "            min_replicas=1,\n",
