--- a/doc/source/tune/examples/tune-pytorch-lightning.ipynb
+++ b/doc/source/tune/examples/tune-pytorch-lightning.ipynb
@@ -1212,7 +1212,7 @@
     "    scheduler = ASHAScheduler(max_t=num_epochs, grace_period=1, reduction_factor=2)\n",
     "\n",
     "    tuner = tune.Tuner(\n",
-    "        ray_trainer,\n",
+    "        train_fn_with_resources,\n",
     "        param_space={\"train_loop_config\": search_space},\n",
     "        tune_config=tune.TuneConfig(\n",
     "            metric=\"ptl/val_accuracy\",\n",
