--- a/doc/source/serve/tutorials/deployment-serve-llm/reasoning-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/reasoning-llm/notebook.ipynb
@@ -7,6 +7,11 @@
    "source": [
     "# Deploy a reasoning LLM\n",
     "\n",
+    "<div align=\"left\">\n",
+    "<a target=\"_blank\" href=\"https://console.anyscale.com/template-preview/deployment-serve-llm?file=%252Ffiles%252Freasoning-llm\"><img src=\"https://img.shields.io/badge/🚀 Run_on-Anyscale-9hf\"></a>&nbsp;\n",
+    "<a href=\"https://github.com/ray-project/ray/tree/master/doc/source/serve/tutorials/deployment-serve-llm/reasoning-llm\" role=\"button\"><img src=\"https://img.shields.io/static/v1?label=&amp;message=View%20On%20GitHub&amp;color=586069&amp;logo=github&amp;labelColor=2f363d\"></a>&nbsp;\n",
+    "</div>\n",
+    "\n",
     "A reasoning LLM handles tasks that require deeper analysis or step-by-step thought. It generates intermediate reasoning before arriving at a final answer, making it better suited for situations where careful logic or structured problem-solving is more important than speed or efficiency.\n",
     "\n",
     "This tutorial deploys a reasoning LLM using Ray Serve LLM.  \n",
