--- a/doc/source/serve/tutorials/deployment-serve-llm/small-size-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/small-size-llm/notebook.ipynb
@@ -7,6 +7,11 @@
    "source": [
     "# Deploy a small-sized LLM\n",
     "\n",
+    "<div align=\"left\">\n",
+    "<a target=\"_blank\" href=\"https://console.anyscale.com/template-preview/deployment-serve-llm?file=%252Ffiles%252Fsmall-size-llm\"><img src=\"https://img.shields.io/badge/🚀 Run_on-Anyscale-9hf\"></a>&nbsp;\n",
+    "<a href=\"https://github.com/ray-project/ray/tree/master/doc/source/serve/tutorials/deployment-serve-llm/small-size-llm\" role=\"button\"><img src=\"https://img.shields.io/static/v1?label=&amp;message=View%20On%20GitHub&amp;color=586069&amp;logo=github&amp;labelColor=2f363d\"></a>&nbsp;\n",
+    "</div>\n",
+    "\n",
     "A small LLM runs on a single node with 1–2 GPUs, making it fast, inexpensive, and simple to use. It’s ideal for prototyping, lightweight applications, latency-critical use cases, cost-sensitive deployments, and environments with limited resources where efficiency matters more than peak accuracy.\n",
     "\n",
     "\n",
