--- a/doc/source/serve/tutorials/deployment-serve-llm/vision-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/vision-llm/notebook.ipynb
@@ -7,6 +7,11 @@
             "source": [
                 "# Deploy a vision LLM\n",
                 "\n",
+                "<div align=\"left\">\n",
+                "<a target=\"_blank\" href=\"https://console.anyscale.com/template-preview/deployment-serve-llm?file=%252Ffiles%252Fvision-llm\"><img src=\"https://img.shields.io/badge/🚀 Run_on-Anyscale-9hf\"></a>&nbsp;\n",
+                "<a href=\"https://github.com/ray-project/ray/tree/master/doc/source/serve/tutorials/deployment-serve-llm/vision-llm\" role=\"button\"><img src=\"https://img.shields.io/static/v1?label=&amp;message=View%20On%20GitHub&amp;color=586069&amp;logo=github&amp;labelColor=2f363d\"></a>&nbsp;\n",
+                "</div>\n",
+                "\n",
                 "A vision LLM can interpret images as well as text, enabling tasks like answering questions about charts, analyzing photos, or combining visuals with instructions. It extends LLMs beyond language to support multimodal reasoning and richer applications.  \n",
                 "\n",
                 "This tutorial deploys a vision LLM using Ray Serve LLM.  \n",
