nitpick: comment about TP vs autoscaling for concurrency
Signed-off-by: Aydin Abiar <aydin@anyscale.com>

--- a/doc/source/serve/tutorials/deployment-serve-llm/large-size-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/large-size-llm/notebook.ipynb
@@ -406,8 +406,8 @@
     "Some GPUs provide significantly more room for KV cache and allow for higher concurrency out of the box.\n",
     "\n",
     "**Scale with more replicas**  \n",
-    "In addition to tuning per-GPU concurrency, you can scale *horizontally* by increasing the number of replicas in your config.  \n",
-    "Each replica runs on its own GPU, so raising the replica count increases the total number of concurrent requests your service can handle, especially under sustained or bursty traffic.\n",
+    "In addition to tuning per-replica concurrency, you can scale *horizontally* by increasing the number of replicas in your config.  \n",
+    "Raising the replica count increases the total number of concurrent requests your service can handle, especially under sustained or bursty traffic.\n",
     "```yaml\n",
     "deployment_config:\n",
     "  autoscaling_config:\n",
