--- a/doc/source/serve/tutorials/deployment-serve-llm/hybrid-reasoning-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/hybrid-reasoning-llm/notebook.ipynb
@@ -141,6 +141,7 @@
     "    accelerator_type=\"L40S\", # Or \"A100-40G\"\n",
     "    deployment_config=dict(\n",
     "        autoscaling_config=dict(\n",
+    "            # Increase number of replicas for higher throughput/concurrency.\n",
     "            min_replicas=1,\n",
     "            max_replicas=2,\n",
     "        )\n",
@@ -148,7 +149,7 @@
     "    ### Uncomment if your model is gated and needs your Hugging Face token to access it.\n",
     "    # runtime_env=dict(env_vars={\"HF_TOKEN\": os.environ.get(\"HF_TOKEN\")}),\n",
     "    engine_kwargs=dict(\n",
-    "        # 4 GPUs is enough but you can increase tensor_parallel_size to more GPUs for better concurrency.\n",
+    "        # 4 GPUs is enough but you can increase tensor_parallel_size to fit larger models.\n",
     "        tensor_parallel_size=4, max_model_len=32768, reasoning_parser=\"qwen3\"\n",
     "    ),\n",
     ")\n",
